[metadata]
name = griottes
description = Python program to generate NetworkX graphs from segmented images
author = 
    Gustave Ronteix 
    Andrey Aristov
author_email = aaristov@pasteur.fr
project_urls = 
    Source code = "https://github.com/BaroudLab/Griottes",
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3 
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
install_requires=
    numpy
    scipy
    networkx
    tqdm
    pandas<2
    scikit-image
    scikit-learn
    matplotlib
    seaborn

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src


